--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Old Era on Wikipedia",
     "version": "2.0.6",
-    "manifest_version": 2,
+    "manifest_version": 3,
     "description": "Convert dates BCE into Old Era dates (similar to Holocene Calendar aka Human Era).",
     "content_scripts": [
         {
@@ -27,17 +27,19 @@
         }
     ],
     "background": {
-        "scripts": [
-            "background.js"
-        ]
+        "service_worker": "background.js"
     },
-    "browser_action": {
+    "action": {
         "default_icon": "images/icon16.png",
         "default_popup": "popup.html"
     },
-    "permissions": [
-        "https://en.wikipedia.org/*",
-        "storage"
+    "permissions":[
+        "storage",
+        "tabs",
+        "activeTab"
+    ],
+    "host_permissions": [
+        "https://en.wikipedia.org/*"
     ],
     "icons": {
         "16": "images/icon16.png",
