--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Old Era on Wikipedia",
-    "version": "2.0.6",
+    "name": "Old Era - Ancient Date Converter",
+    "version": "3.0.0",
     "manifest_version": 3,
-    "description": "Convert dates BCE into Old Era dates (similar to Holocene Calendar aka Human Era).",
+    "description": "Convert dates BC/BCE into Old Era dates (similar to Holocene Calendar aka Human Era).",
     "content_scripts": [
         {
             "matches": [
