backend support for websites other than Wikipedia added

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -143,6 +143,9 @@
         },
         "sendToServer":{
             "description":"send to server"
+        },
+        "clearCache":{
+            "description":"clear cache"
         }
     }
 }
