wikitext editing popup; "don't show again" checkbox; running script on content load

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -29,7 +29,8 @@
             ],
             "css": [
                 "styles.css"
-            ]
+            ],
+            "run_at": "document_end"
         }
     ],
     "background": {
