wikitext editor added

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -22,6 +22,7 @@
                 "pageChecker.js",
                 "summaryManager.js",
                 "editor/history.js",
+                "editor/wikitextEditor.js",
                 "editor/editorContent.js",
                 "editor/selectors.js",
                 "editor/committers.js",
