threshold manipulation added

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -142,6 +142,9 @@
         },
         "clearCache":{
             "description":"clear cache"
+        },
+        "startWikitextEditing":{
+            "description":"open wikitext editor"
         }
     }
 }
