calling templates automatically when processing new page

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -21,6 +21,7 @@
                 "patternProcessors.js",
                 "pageChecker.js",
                 "summaryManager.js",
+                "requests.js",
                 "editor/history.js",
                 "editor/editorContent.js",
                 "editor/wikitextEditor.js",
