adding license info to new files

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,6 +9,7 @@
                 "<all_urls>"
             ],
             "js": [
+                "globals.js",
                 "constants.js",
                 "patternsInHtml.js",
                 "patternsInText.js",
