--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -140,8 +140,8 @@
         "toggleTestingModeFromShortcut":{
             "description": "toggle test mode"
         },
-        "sendToServer":{
-            "description":"send to server"
+        "openEditor":{
+            "description":"open editor"
         },
         "clearCache":{
             "description":"clear cache"
