toggle page info popup from

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -148,6 +148,9 @@
         },
         "startWikitextEditing":{
             "description":"open wikitext editor"
+        },
+        "togglePageInfo":{
+            "description":"toggle page info popup"
         }
     }
 }
