method for shortening decades added

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -151,6 +151,9 @@
         },
         "togglePageInfo":{
             "description":"toggle page info popup"
+        },
+        "shortenDecadesInRange":{
+            "description":"shortedn decades in range"
         }
     }
 }
