some progress on handling ad patterns

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,6 +19,7 @@
                 "location.js",
                 "translation.js",
                 "automaticTranslation.js",
+                "adPatternProcessors.js",
                 "patternProcessors.js",
                 "pageChecker.js",
                 "summaryManager.js",
