--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Old Era - Ancient Date Converter",
-    "version": "8.3.0",
+    "version": "8.4.0",
     "manifest_version": 3,
     "description": "Convert dates BC/BCE into Old Era dates (similar to Holocene Calendar aka Human Era).",
     "content_scripts": [
@@ -161,6 +161,15 @@
         },
         "shortenDecadesInRange":{
             "description":"shortedn decades in range"
+        },
+        "copyToClipboard":{
+            "description":"copy to clipboard"
+        },
+        "openDataPage":{
+            "description":"open data page"
+        },
+        "saveDataPage":{
+            "description":"save data page"
         }
     }
 }
